--- a/views/booking_management_new_reservation_customer_selection.erb
+++ b/views/booking_management_new_reservation_customer_selection.erb
@@ -4,6 +4,12 @@
 <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000">
 </div>
 <div class="admin_content_wrapper">
+  <div class="alert alert-warning">
+    <p>¡Está funcionalidad desaparecerá en breve!</p>
+    <p>Ahora disponen de la gestión completa de clientes. Pueden mantener su fichero de clientes y asignar/copiar los datos en los 
+       contratos. También pueden crear las fichas de clientes desde reservas existentes para no tener que introducir toda la información.</p>
+    <p>En breve les comentaremos la posibilidad de realizar la migración automática de la información de las reservas al fichero de clientes.</p>
+  </div>
   <div class="container_12">
     <div class="grid_6">  
       <form name="search" class="top-margin-1line bottom-space-1line" action="/admin/booking/customers" method="POST">
