--- a/views/config_booking_frontend_contents.js.erb
+++ b/views/config_booking_frontend_contents.js.erb
@@ -4,6 +4,16 @@ require(['jquery', 'YSDForms', 'jquery.ui', 'jquery.toast'], function($, YSDForm
   model = {
 
       menuFirstTime: true,
+      contentType: 'page',
+      contentTypes: {
+        <% @content_types.each do |content_type| %>
+        '<%=content_type.id%>':'<%=content_type.name%>',
+        <% end %>
+      },
+      
+      contentTypeTitle: function() {
+        return model.contentTypes[model.contentType];
+      },
 
       deletePage: function(id) {
 
@@ -19,8 +29,8 @@ require(['jquery', 'YSDForms', 'jquery.ui', 'jquery.toast'], function($, YSDForm
               success: function(data, textStatus, jqXHR) {
                   $('#page-'+id).remove();
                   $.toast({
-                      heading: 'Página eliminada',
-                      text: 'La página se ha eliminado correctamente',
+                      heading: 'Contenido eliminado',
+                      text: 'El contenido se ha eliminado correctamente',
                       position: 'top-right',
                       bgColor: 'rgb(56, 154, 56)',
                       textColor: 'white',
@@ -119,14 +129,19 @@ require(['jquery', 'YSDForms', 'jquery.ui', 'jquery.toast'], function($, YSDForm
 
   controller = {
 
+      contentTypeChanged: function(newValue) {
+          model.contentType = newValue;
+          $('#content_type_title').html(model.contentTypeTitle);
+          view.reloadPages();
+      },
+
       newPageButtonClick: function() { // New page button click
 
-          $.ajax({url: '/admin/cms/page-content/new #container', dataType: 'text'}).done(function(html) {
+          $.ajax({url: '/admin/cms/'+model.contentType+'-content/new #container', dataType: 'text'}).done(function(html) {
               var dom = $('<html />').prop('innerHTML', html);
-              $('.modal-title').html('Nueva página');
+              $('.modal-title').html('Nuevo/a ' + model.contentTypeTitle());
               htmlEditor('.texteditor');
               $('#modal_container .modal-body').html(dom.find('body #container'));
-              //$('head').append(dom.find('script:not([src])'));
               var script = dom.find('script:not([src])'); // Array of scripts source
               controller.removeExistingScriptsFromHead(script);
               $('head').append(script);
@@ -145,9 +160,9 @@ require(['jquery', 'YSDForms', 'jquery.ui', 'jquery.toast'], function($, YSDForm
 
       editPageButtonClick: function(id) { // Edit page button click
 
-          $.ajax({url: '/admin/cms/page-content/'+id+'/edit #container', dataType: 'text'}).done(function(html) {
+          $.ajax({url: '/admin/cms/'+model.contentType+'-content/'+id+'/edit #container', dataType: 'text'}).done(function(html) {
               var dom = $('<html />').prop('innerHTML', html);
-              $('.modal-title').html('Editar página');
+              $('.modal-title').html('Editar ' + model.contentTypeTitle());
               htmlEditor('.texteditor');
               $('#modal_container .modal-body').html(dom.find('body #container'));
               //$('head').append(dom.find('script:not([src])'));
@@ -289,8 +304,15 @@ require(['jquery', 'YSDForms', 'jquery.ui', 'jquery.toast'], function($, YSDForm
 
       init: function() {
           YSDForms.improve();
+          this.setupEvents();
           this.setupPagesEvents();
           this.setupMenuEvents();
+      },
+
+      setupEvents: function() {
+          $('.content_type').bind('click', function(){
+            controller.contentTypeChanged($(this).attr('rel'));
+          });
       },
 
       setupPagesEvents: function() {
@@ -370,7 +392,7 @@ require(['jquery', 'YSDForms', 'jquery.ui', 'jquery.toast'], function($, YSDForm
       },
 
       reloadPages: function() {
-          $('#pages_container').load('/admin/cms/pages #pages_holder', function() {
+          $('#pages_container').load('/admin/cms/'+ model.contentType +'s #pages_holder', function() {
               view.setupPagesEvents();
           });
       },
